# NN_Investigator

./: .gitignore  CLAUDE.md  README.md  load_initial_data.py  nn_investigator.db  nodenorm.md  pyproject.toml
docs/: nameres.md
src/nn_investigator/: __init__.py  app.py  database.py  linkouts.py  nameres.py  nodenorm.py
templates/: add_pair.html  base.html  index.html  investigate.html
tests/: __init__.py
tests/integration/: __init__.py  test_nameres.py  test_nodenorm.py
tests/unit/: __init__.py  test_app.py  test_database.py
